--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 * {
     font-family: roboto, sans-serif;
+    margin: 0;
+    padding: 0;
 }
 
 ul {
@@ -10,8 +12,10 @@ ul {
 
 header {
     display: flex;
+    align-items: center;
     justify-content: space-between;
     background-color: #1f2937;
+    margin: 0;
 }
 
 .logo {
@@ -22,4 +26,20 @@ header {
 header ul {
     display: flex;
     gap: 20px;
+    font-size: 18px;
+    color: #e5e7eb;
+}
+
+/*
+This has no effect
+.content {
+    display: flex;
+    flex-flow: column nowrap;
+}
+*/
+
+/* TEMPORARY */
+section {
+    border: solid 2px black;
+    height: 400px;
 }
